--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,25 @@
 {
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./*"
+      ],
+      "@models/*": [
+        "./src/models/*"
+      ]
+    },
+    "lib": [
+      "ES2019",
+      "DOM"
+    ],
+    "typeRoots": [
+      "./types/global.d.ts"
+    ]
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
